--- a/iMatMini/src/iMat/FXML/acount.fxml
+++ b/iMatMini/src/iMat/FXML/acount.fxml
@@ -33,7 +33,7 @@
                                  <children>
                                     <ImageView fitHeight="100.0" fitWidth="150.0" layoutX="-1.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="20.0">
                                        <image>
-                                          <Image url="@../imatmini/resources/ditt_konto_knapp.png" />
+                                          <Image url="@../resources/ditt_konto_knapp.png" />
                                        </image>
                                     </ImageView>
                                     <Button layoutX="9.0" layoutY="60.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Användaruppgifter" AnchorPane.leftAnchor="5.0">
@@ -63,7 +63,7 @@
                                        <children>
                                           <ImageView fitHeight="100.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="10.666666666666629" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
                                              <image>
-                                                <Image url="@../imatmini/resources/dina_favoriter.png" />
+                                                <Image url="@../resources/dina_favoriter.png" />
                                              </image>
                                           </ImageView>
                                           <Label layoutX="131.0" layoutY="40.0" text="Din Orderhistorik">
@@ -82,7 +82,7 @@
                                        <children>
                                           <ImageView fitHeight="100.0" fitWidth="500.0" layoutX="6.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="10.666666666666629" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
                                              <image>
-                                                <Image url="@../imatmini/resources/dina_favoriter.png" />
+                                                <Image url="@../resources/dina_favoriter.png" />
                                              </image>
                                           </ImageView>
                                           <Label layoutX="137.0" layoutY="39.0" text="Dina Favoriter">
@@ -92,7 +92,7 @@
                                           </Label>
                                           <ImageView fitHeight="38.0" fitWidth="44.0" layoutX="388.0" layoutY="44.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
-                                                <Image url="@resources/star_icon.png" />
+                                                <Image url="@../resources/star_icon.png" />
                                              </image>
                                           </ImageView>
                                           <ScrollPane prefHeight="606.0" prefWidth="531.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="110.0">
@@ -154,7 +154,7 @@
                                                                <graphic>
                                                                   <ImageView fitHeight="77.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                                                      <image>
-                                                                        <Image url="@resources/spara_knapp.png" />
+                                                                        <Image url="@../resources/spara_knapp.png" />
                                                                      </image>
                                                                   </ImageView>
                                                                </graphic>
@@ -234,7 +234,7 @@
                                                                <graphic>
                                                                   <ImageView fitHeight="77.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                                                      <image>
-                                                                        <Image url="@resources/spara_knapp.png" />
+                                                                        <Image url="@../resources/spara_knapp.png" />
                                                                      </image>
                                                                   </ImageView>
                                                                </graphic>
@@ -265,9 +265,9 @@
                                                                   <Font name="Arial" size="24.0" />
                                                                </font>
                                                                <graphic>
-                                                                  <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                                                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                                                                      <image>
-                                                                        <Image url="@../imatmini/resources/kortBetalningLogo.png" />
+                                                                        <Image url="@../resources/swishLogo.png" />
                                                                      </image>
                                                                   </ImageView>
                                                                </graphic>
@@ -279,7 +279,7 @@
                                                                <graphic>
                                                                   <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                                                                      <image>
-                                                                        <Image url="@../imatmini/resources/swishLogo.png" />
+                                                                        <Image url="@../resources/kortBetalningLogo.png" />
                                                                      </image>
                                                                   </ImageView>
                                                                </graphic>
@@ -328,7 +328,7 @@
                                                                <graphic>
                                                                   <ImageView fitHeight="77.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                                                      <image>
-                                                                        <Image url="@resources/spara_knapp.png" />
+                                                                        <Image url="@../resources/spara_knapp.png" />
                                                                      </image>
                                                                   </ImageView>
                                                                </graphic>
