--- a/iMatMini/src/iMat/FXML/header.fxml
+++ b/iMatMini/src/iMat/FXML/header.fxml
@@ -9,13 +9,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="126.0" prefWidth="1095.0" stylesheets="@css/header.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="126.0" prefWidth="1095.0" stylesheets="@../css/header.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane fx:id="cartAnchorPane" layoutX="951.0" layoutY="2.0" prefHeight="120.0" prefWidth="130.0" AnchorPane.leftAnchor="951.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="2.0">
          <children>
             <ImageView fitHeight="45.0" fitWidth="60.0" layoutX="43.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@resources/cart_icon.png" />
+                  <Image url="@../resources/cart_icon.png" />
                </image>
             </ImageView>
             <Label alignment="CENTER" layoutX="10.0" layoutY="75.0" prefHeight="31.0" prefWidth="110.0" text="Varukorg">
@@ -38,7 +38,7 @@
                   </Label>
                   <ImageView fitHeight="45.0" fitWidth="60.0" layoutX="58.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@resources/profile_login_icon.png" />
+                        <Image url="@../resources/profile_login_icon.png" />
                      </image>
                   </ImageView>
                </children>
@@ -47,7 +47,7 @@
                <children>
                   <ImageView fitHeight="45.0" fitWidth="60.0" layoutX="43.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@resources/profile_loggedin_icon.png" />
+                        <Image url="@../resources/profile_loggedin_icon.png" />
                      </image>
                   </ImageView>
                   <MenuButton fx:id="profileMenuButton" alignment="CENTER" layoutX="6.0" layoutY="77.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="130.0" text="Ditt konto" textFill="WHITE">
@@ -71,7 +71,7 @@
             <Label layoutX="112.0" layoutY="21.0" prefHeight="58.0" prefWidth="136.0" styleClass="text-logo" text="IMat" />
             <ImageView fitHeight="90.0" fitWidth="94.0" layoutX="6.0" layoutY="5.0" pickOnBounds="true">
                <image>
-                  <Image url="@resources/iMat_logo.png" />
+                  <Image url="@../resources/iMat_logo.png" />
                </image>
             </ImageView>
          </children>
