--- a/iMatMini/src/iMat/FXML/iMatMini.fxml
+++ b/iMatMini/src/iMat/FXML/iMatMini.fxml
@@ -66,7 +66,7 @@
             </AnchorPane>
             <AnchorPane fx:id="mainpage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="664.0" prefWidth="1095.0">
                <children>
-                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="125.0" prefWidth="1095.0" stylesheets="@css/header.css" AnchorPane.bottomAnchor="6.400000000000006" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="125.0" prefWidth="1095.0" stylesheets="@../css/header.css" AnchorPane.bottomAnchor="6.400000000000006" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <AnchorPane fx:id="cartAnchorPane1" layoutX="951.0" layoutY="2.0" prefHeight="120.0" prefWidth="130.0" AnchorPane.leftAnchor="951.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="2.0">
                            <children>
@@ -78,7 +78,7 @@
                               </Label>
                               <ImageView fitHeight="45.0" fitWidth="60.0" layoutX="31.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@resources/cart_icon.png" />
+                                    <Image url="@../resources/cart_icon.png" />
                                  </image>
                               </ImageView>
                            </children>
@@ -89,7 +89,7 @@
                                  <children>
                                     <ImageView fitHeight="45.0" fitWidth="60.0" layoutX="52.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@resources/profile_loggedin_icon.png" />
+                                          <Image url="@../resources/profile_loggedin_icon.png" />
                                        </image>
                                     </ImageView>
                                     <MenuButton fx:id="profileMenuButton1" alignment="CENTER" layoutX="14.0" layoutY="82.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="130.0" text="Ditt konto" textFill="WHITE">
@@ -116,7 +116,7 @@
                                     </Label>
                                     <ImageView fitHeight="45.0" fitWidth="60.0" layoutX="58.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@resources/profile_login_icon.png" />
+                                          <Image url="@../resources/profile_login_icon.png" />
                                        </image>
                                     </ImageView>
                                     <Button layoutX="9.0" layoutY="12.0" mnemonicParsing="false" onAction="#loginToFront" prefHeight="108.0" prefWidth="146.0" styleClass="transparentbutton" />
@@ -129,7 +129,7 @@
                               <Label layoutX="112.0" layoutY="21.0" prefHeight="58.0" prefWidth="136.0" styleClass="text-logo" text="IMat" />
                               <ImageView fitHeight="90.0" fitWidth="94.0" layoutX="6.0" layoutY="5.0" pickOnBounds="true">
                                  <image>
-                                    <Image url="@resources/iMat_logo.png" />
+                                    <Image url="@../resources/iMat_logo.png" />
                                  </image>
                               </ImageView>
                               <Button mnemonicParsing="false" onAction="#loadStart" prefHeight="101.0" prefWidth="254.0" style="-fx-background-color: #00000000;" />
@@ -142,7 +142,7 @@
                         <String fx:value="set-text-color-white" />
                      </styleClass>
                   </AnchorPane>
-                  <AnchorPane fx:id="loaderPane" layoutY="125.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="1095.0" style="-fx-background-color: #F2F5F3;" stylesheets="@css/startpage.css">
+                  <AnchorPane fx:id="loaderPane" layoutY="125.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="1095.0" style="-fx-background-color: #F2F5F3;" stylesheets="@../css/startpage.css">
                      <children>
                         <Accordion layoutY="128.0">
                           <panes>
