--- a/iMatMini/src/iMat/FXML/productDescription.fxml
+++ b/iMatMini/src/iMat/FXML/productDescription.fxml
@@ -76,7 +76,7 @@
                            <graphic>
                               <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@resources/PlusButton.png" />
+                                    <Image url="@../resources/PlusButton.png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -85,7 +85,7 @@
                            <graphic>
                               <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@resources/MinusButton.png" />
+                                    <Image url="@../resources/MinusButton.png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -97,7 +97,7 @@
                         </Label>
                         <ImageView fx:id="star_unmarked" fitHeight="50.0" fitWidth="50.0" layoutX="287.0" layoutY="222.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@resources/star_unmarked.jpg" />
+                              <Image url="@../resources/star_unmarked.jpg" />
                            </image>
                         </ImageView>
                         <Separator layoutX="50.0" layoutY="370.0" prefWidth="600.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="52.0" />
@@ -109,7 +109,7 @@
                         </Label>
                         <ImageView fx:id="closeImageView" fitHeight="35.0" fitWidth="35.0" layoutX="659.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                            <image>
-                              <Image url="@resources/icon_close.png" />
+                              <Image url="@../resources/icon_close.png" />
                            </image>
                         </ImageView>
                      </children>
