--- a/iMatMini/src/iMat/FXML/acount.fxml
+++ b/iMatMini/src/iMat/FXML/acount.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.ToggleButtonGroup?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
@@ -13,21 +12,22 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="820.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="imatmini.iMatMiniController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="1095.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iMat.IMatController">
     <children>
-        <StackPane prefHeight="560.0" prefWidth="720.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="1095.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <AnchorPane fx:id="productDescriptionPanel" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: rgba(0, 0, 0, 0.75);">
+                <AnchorPane fx:id="productDescriptionPanel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="1095.0" style="-fx-background-color: rgba(0, 0, 0, 0.75);">
                     <children>
-                        <AnchorPane layoutX="19.0" layoutY="104.0" onMouseClicked="#mouseTrap" prefHeight="456.0" prefWidth="749.0" style="-fx-background-color: -fx-background;" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
+                        <AnchorPane layoutX="19.0" layoutY="104.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#mouseTrap" prefHeight="539.0" prefWidth="1095.0" style="-fx-background-color: -fx-background;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <opaqueInsets>
                                 <Insets />
                             </opaqueInsets>
                      <children>
-                        <SplitPane dividerPositions="0.234225621414914" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <SplitPane dividerPositions="0.234225621414914" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="1095.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                           <items>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="50.0">
                                  <children>
@@ -333,30 +333,30 @@
                                                                   </ImageView>
                                                                </graphic>
                                                             </Button>
-                                                            <ToggleButtonGroup layoutX="5.4" layoutY="100.0" prefHeight="24.0" prefWidth="525.0" selectionType="SINGLE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                                                                <toggles>
-                                                                  <RadioButton fx:id="kortBetalning" mnemonicParsing="false">
+                                                            <Pane layoutX="-4.0" layoutY="99.0" prefHeight="37.0" prefWidth="532.0" style="-fx-background-color: #00000000;">
+                                                               <children>
+                                                                  <RadioButton fx:id="kortBetalning" layoutX="14.0" layoutY="-1.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="102.0">
                                                                      <padding>
                                                                         <Insets left="30.0" />
                                                                      </padding>
                                                                   </RadioButton>
-                                                                  <RadioButton fx:id="E_fakturaBetalning" mnemonicParsing="false">
-                                                                     <padding>
-                                                                        <Insets left="110.0" />
-                                                                     </padding>
-                                                                  </RadioButton>
-                                                                  <RadioButton fx:id="swishBetalning" mnemonicParsing="false">
-                                                                     <padding>
-                                                                        <Insets left="85.0" />
-                                                                     </padding>
-                                                                  </RadioButton>
-                                                                  <RadioButton fx:id="pappersfakturaBetalning" graphicTextGap="10.0" mnemonicParsing="false">
+                                                                  <RadioButton fx:id="pappersfakturaBetalning" graphicTextGap="10.0" layoutX="297.0" layoutY="4.0" mnemonicParsing="false">
                                                                      <padding>
                                                                         <Insets left="120.0" />
                                                                      </padding>
                                                                   </RadioButton>
-                                                                </toggles>
-                                                            </ToggleButtonGroup>
+                                                                  <RadioButton fx:id="E_fakturaBetalning" layoutX="57.0" layoutY="-1.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0">
+                                                                     <padding>
+                                                                        <Insets left="110.0" />
+                                                                     </padding>
+                                                                  </RadioButton>
+                                                                  <RadioButton fx:id="swishBetalning" layoutX="186.0" layoutY="-1.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="96.0">
+                                                                     <padding>
+                                                                        <Insets left="85.0" />
+                                                                     </padding>
+                                                                  </RadioButton>
+                                                               </children>
+                                                            </Pane>
                                                          </children>
                                                       </AnchorPane>
                                                    </content>
