--- a/iMatMini/src/iMat/FXML/acount.fxml
+++ b/iMatMini/src/iMat/FXML/acount.fxml
@@ -12,22 +12,21 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="1095.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iMat.IMatController">
+<AnchorPane id="AnchorPane" prefHeight="820.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iMat.IMatController">
     <children>
-        <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="1095.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <StackPane prefHeight="560.0" prefWidth="720.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <AnchorPane fx:id="productDescriptionPanel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="1095.0" style="-fx-background-color: rgba(0, 0, 0, 0.75);">
+                <AnchorPane fx:id="productDescriptionPanel" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: rgba(0, 0, 0, 0.75);">
                     <children>
-                        <AnchorPane layoutX="19.0" layoutY="104.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#mouseTrap" prefHeight="539.0" prefWidth="1095.0" style="-fx-background-color: -fx-background;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <AnchorPane layoutX="19.0" layoutY="104.0" prefHeight="456.0" prefWidth="749.0" style="-fx-background-color: -fx-background;" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
                             <opaqueInsets>
                                 <Insets />
                             </opaqueInsets>
                      <children>
-                        <SplitPane dividerPositions="0.234225621414914" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="1095.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <SplitPane dividerPositions="0.234225621414914" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                           <items>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="50.0">
                                  <children>
@@ -267,7 +266,7 @@
                                                                <graphic>
                                                                   <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                                                                      <image>
-                                                                        <Image url="@../resources/swishLogo.png" />
+                                                                        <Image url="@../resources/kortBetalningLogo.png" />
                                                                      </image>
                                                                   </ImageView>
                                                                </graphic>
@@ -279,7 +278,7 @@
                                                                <graphic>
                                                                   <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                                                                      <image>
-                                                                        <Image url="@../resources/kortBetalningLogo.png" />
+                                                                        <Image url="@../resources/swishLogo.png" />
                                                                      </image>
                                                                   </ImageView>
                                                                </graphic>
@@ -333,30 +332,10 @@
                                                                   </ImageView>
                                                                </graphic>
                                                             </Button>
-                                                            <Pane layoutX="-4.0" layoutY="99.0" prefHeight="37.0" prefWidth="532.0" style="-fx-background-color: #00000000;">
-                                                               <children>
-                                                                  <RadioButton fx:id="kortBetalning" layoutX="14.0" layoutY="-1.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="102.0">
-                                                                     <padding>
-                                                                        <Insets left="30.0" />
-                                                                     </padding>
-                                                                  </RadioButton>
-                                                                  <RadioButton fx:id="pappersfakturaBetalning" graphicTextGap="10.0" layoutX="297.0" layoutY="4.0" mnemonicParsing="false">
-                                                                     <padding>
-                                                                        <Insets left="120.0" />
-                                                                     </padding>
-                                                                  </RadioButton>
-                                                                  <RadioButton fx:id="E_fakturaBetalning" layoutX="57.0" layoutY="-1.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0">
-                                                                     <padding>
-                                                                        <Insets left="110.0" />
-                                                                     </padding>
-                                                                  </RadioButton>
-                                                                  <RadioButton fx:id="swishBetalning" layoutX="186.0" layoutY="-1.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="96.0">
-                                                                     <padding>
-                                                                        <Insets left="85.0" />
-                                                                     </padding>
-                                                                  </RadioButton>
-                                                               </children>
-                                                            </Pane>
+                                                            <RadioButton fx:id="kortBetalning" layoutX="35.0" layoutY="100.0" mnemonicParsing="false" />
+                                                            <RadioButton fx:id="E_fakturaBetalning" layoutX="165.0" layoutY="100.0" mnemonicParsing="false" />
+                                                            <RadioButton fx:id="swishBetalning" layoutX="275.0" layoutY="100.0" mnemonicParsing="false" />
+                                                            <RadioButton fx:id="pappersfakturaBetalning" graphicTextGap="10.0" layoutX="420.0" layoutY="100.0" mnemonicParsing="false" />
                                                          </children>
                                                       </AnchorPane>
                                                    </content>
