--- a/iMatMini/src/iMat/FXML/productDescription.fxml
+++ b/iMatMini/src/iMat/FXML/productDescription.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.ToggleButtonGroup?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -13,13 +12,13 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="640.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="imatmini.iMatMiniController">
+<AnchorPane id="AnchorPane" prefHeight="640.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iMat.IMatController">
    <children>
       <StackPane prefHeight="560.0" prefWidth="720.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane fx:id="productDescriptionPanel" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: rgba(0, 0, 0, 0.75);">
                <children>
-                  <AnchorPane layoutX="19.0" layoutY="104.0" onMouseClicked="#mouseTrap" prefHeight="456.0" prefWidth="749.0" style="-fx-background-color: -fx-background;" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
+                  <AnchorPane layoutX="19.0" layoutY="104.0" prefHeight="456.0" prefWidth="749.0" style="-fx-background-color: -fx-background;" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
                      <children>
                         <AnchorPane layoutX="1.0" layoutY="327.0" prefHeight="213.0" prefWidth="749.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                            <children>
@@ -42,25 +41,21 @@
                               <Font name="Arial" size="36.0" />
                            </font>
                         </Label>
-                        <ToggleButtonGroup layoutX="43.0" layoutY="275.0" selectionType="SINGLE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                           <toggles>
-                              <ToggleButton fx:id="Produktbeskrivning" mnemonicParsing="false" prefHeight="52.0" prefWidth="234.0" text="Produktbeskrivning">
-                                 <font>
-                                    <Font size="22.0" />
-                                 </font>
-                              </ToggleButton>
-                              <ToggleButton fx:id="Innerhållsförteckning" mnemonicParsing="false" prefHeight="52.0" prefWidth="234.0" text="Innerhållsförteckning">
-                                 <font>
-                                    <Font name="Arial" size="22.0" />
-                                 </font>
-                              </ToggleButton>
-                              <ToggleButton fx:id="Övrig_Information" mnemonicParsing="false" prefHeight="52.0" prefWidth="234.0" text="Övrig Information">
-                                 <font>
-                                    <Font name="Arial" size="22.0" />
-                                 </font>
-                              </ToggleButton>
-                           </toggles>
-                        </ToggleButtonGroup>
+                        <ToggleButton fx:id="Produktbeskrivning" layoutY="275.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="234.0" text="Produktbeskrivning" AnchorPane.leftAnchor="0.0">
+                           <font>
+                              <Font size="22.0" />
+                           </font>
+                        </ToggleButton>
+                        <ToggleButton fx:id="Innerhållsförteckning" layoutX="233.0" layoutY="275.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="234.0" text="Innerhållsförteckning" AnchorPane.leftAnchor="233.0">
+                           <font>
+                              <Font name="Arial" size="22.0" />
+                           </font>
+                        </ToggleButton>
+                        <ToggleButton fx:id="Övrig_Information" layoutX="449.0" layoutY="275.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="234.0" text="Övrig Information" AnchorPane.leftAnchor="466.0">
+                           <font>
+                              <Font name="Arial" size="22.0" />
+                           </font>
+                        </ToggleButton>
                         <Button fx:id="LäggTillButton" layoutX="469.0" layoutY="225.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="101.0" style="-fx-background-color: #81D762;" text="Lägg till">
                            <font>
                               <Font size="20.0" />
