--- a/iMatMini/src/iMat/FXML/iMatMini.fxml
+++ b/iMatMini/src/iMat/FXML/iMatMini.fxml
@@ -1174,7 +1174,7 @@
                   </AnchorPane>
                   <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="125.0" prefWidth="1095.0" stylesheets="@../css/header.css">
                      <children>
-                        <AnchorPane fx:id="cartAnchorPane" layoutX="951.0" layoutY="2.0" onMouseClicked="#cartClicked" prefHeight="120.0" prefWidth="130.0" AnchorPane.leftAnchor="951.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="2.0">
+                        <AnchorPane fx:id="cartAnchorPane" layoutX="951.0" layoutY="2.0"  prefHeight="120.0" prefWidth="130.0" AnchorPane.leftAnchor="951.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="2.0">
                            <children>
                               <ImageView fitHeight="45.0" fitWidth="60.0" layoutX="43.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
